# test_task_shift

./: .env  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2023_07_05_1750-27087eff290d_datetime.py  2023_07_05_1828-cfd5c2fafdaf_initial.py  2023_07_05_1830-a73fd5b1c5c3_initial.py  2023_07_07_2212-49f5f6653ea4_init.py  2023_07_07_2218-2d0a529ce08a_init1.py  2023_07_07_2226-cc4c9fb96066_init1.py  2023_07_11_1651-68cdfd3a8e8d_init.py
src/: __init__.py  config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/employee_position_level/: models.py  routers.py  schemas.py  service.py
src/employee_progression/: exceptions.py  models.py  routers.py  schemas.py  service.py
tests/: conftest.py  test_position_level.py  test_progression.py
