[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Дима Бамбагаев <bambagaevdmitrij@gmail.com>"]
readme = "README.md"
packages = [{ include = "test_task" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
