[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Дима Бамбагаев <bambagaevdmitrij@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.0.0"}
environs = "^9.5.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
